added menu button

--- a/index.html
+++ b/index.html
@@ -11,17 +11,45 @@
 
 	<body>
 		<header>
-			<span style="--i: 1">M</span>
-			<span style="--i: 2">i</span>
-			<span style="--i: 3">n</span>
-			<span style="--i: 4">e</span>
-			<span style="--i: 5">s</span>
-			<span style="--i: 6">w</span>
-			<span style="--i: 7">e</span>
-			<span style="--i: 8">e</span>
-			<span style="--i: 9">p</span>
-			<span style="--i: 10">e</span>
-			<span style="--i: 11">r</span>
+			<div id="container">
+				<div id="title">
+					<span style="--i: 1">M</span>
+					<span style="--i: 2">i</span>
+					<span style="--i: 3">n</span>
+					<span style="--i: 4">e</span>
+					<span style="--i: 5">s</span>
+					<span style="--i: 6">w</span>
+					<span style="--i: 7">e</span>
+					<span style="--i: 8">e</span>
+					<span style="--i: 9">p</span>
+					<span style="--i: 10">e</span>
+					<span style="--i: 11">r</span>
+				</div>
+
+				<div id="menu">
+					<div id="button">
+						<span id="menuButton"></span>
+					</div>
+					<div id="bombSet">
+						<div id="numberOfBombs">
+							<span id="bombimage">Bomb</span>
+							<div id="numArea">
+								<span class="numUpDown" id="numDown"></span>
+								<input
+									id="num"
+									type="number"
+									min="1"
+									max="80"
+									value="10"
+								/>
+								<span class="numUpDown" id="numUp"></span>
+							</div>
+
+							<span id="set">Set</span>
+						</div>
+					</div>
+				</div>
+			</div>
 		</header>
 
 		<div class="content">
